resources/css/product.css
main {
    width: 100%;
}

.main-product {
    width: 100%;
    height: 25rem;

    display: flex;

    border-block-end: 1px solid var(--color-alt);
}

@media (aspect-ratio <= 2 / 3) {
    .main-product {
        flex-direction: column;
        height: fit-content;
    }
}

.main-image {
    height: 100%;
    min-height: 15rem;

    min-width: 40dvw;

    flex-grow: 2;
    flex-shrink: 1;

    object-fit: contain;

    background-color: var(--color-alt);
}

@media (aspect-ratio <= 2 / 3) {
    .main-image {
        height: 20rem;
    }
}

.product-col {
    height: 100%;

    flex-grow: 1;
    flex-shrink: 1;

    display: flex;
    flex-direction: column;

    padding-inline-start: 0.5rem;
    padding-inline-end: 1.5rem;
    padding-block: 1rem;
    gap: 1rem;

    border-inline-end: 1px solid var(--color-alt);
}

.product-col > :not(.spacer) {
    margin: unset;
}

.brand-name {
    font-weight: 700;
}

.tags {
    display: flex;
    gap: 0.5rem;
}

.tag {
    border: 1px solid var(--color-alt);
    padding-inline: 0.5rem;
    padding-block: 0.25rem;
}

.main-price {
    width: fit-content;

    font-weight: 700;
    font-size: 2rem;

    background-color: var(--color-alt);
    padding-inline: 0.5rem;
    padding-block: 1rem;
}

.cart-row {
    display: flex;
    align-items: center;
    gap: 0.5rem;

    border-block-end: 1px solid var(--color-alt);
}

.cart-btn {
    background: none;

    height: fit-content;
    border: 1px solid var(--color-alt);

    padding-block: 0.25rem;
    padding-inline: 0.5rem;
}

.cart-row-spacer {
    height: auto;
    width: 1rem;
}

.product-desc {
    display: flex;
    flex-direction: column;
    padding-inline: 1rem;
    padding-block: 1.5rem;
    gap: 1rem;

    line-height: 130%;
}

.product-desc > * {
    margin: unset;
}

.amount-field {
    max-width: 2.5rem;
    appearance: textfield;
}

